--- a/crew.html
+++ b/crew.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
+        <!--font-awesome-->
+
+        <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159565284-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -11,105 +17,143 @@
 
   gtag('config', 'UA-159565284-1');
 </script>
+<!--Style Sheets -->
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+<!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Meddon&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet">
+<!--JavaScript-->
+    <script type="text/javascript" src="js/scripts.js"></script>
     <title>Blades in the Dark Ann Arbor</title>
 </head>
 <body>
-	<div class="skip"><a href="#main">Skip to Main Content</a></div>
-      <nav>
-        <ul>
-          <li><a href="index.html">About</a></li>
-          <li><a class="active" href="crew.html">The Crew</a></li>
-          <li><a href="city.html">The City</a></li>
-          <li><a href="newspaper.html">The Duskvol Daily</a></li>
-        </ul>
-      </nav>
-	<header>
-  		<h1>Step into eternal dusk…</h1>
+    <header>
+        <div class="skip"><a href="#main">Skip to Main Content</a></div>
+        <nav>
+            <ul>
+              <li><a href="index.html">The Game</a></li>
+               <li><a href="map.html">The City</a></li>
+              <li><a class="active" href="crew.html"><i class="fas fa-dungeon"></i> The Crew</a></li>
+              <li><a href="faction.html">The Faction</a></li>
+              <li><a href="newspaper.html">The Duskvol Daily</a></li>
+               <li><a href="contact.html">The Contact</a></li>
+            </ul>
+          </nav>
     </header>
     <main>
+      <h1>~The Crew~</h1>
+    <div class="crew-grid">
+        <div class="grid-item name">
+          <h2>Brace Bookman</h2>
+          <br>
+          Nickname: <span id="frog">Frog</span>
+          <hr>
+        </div>
+        <div class="grid-item portrait">
+          <img src="images/brace.png" alt="Brace Bookman, cut-throat thief">
+        </div>
+        <div class="grid-item stat">
+          <p>
+            <ul>
+              <li>Lurk — a stealthy Infiltrator and burglar</li>
+              <li>Plump, calm, fierce, Severosian</li>
+              <li>Former Academic</li>
+              <li>Vice of Pleasure / Blackmarket Delicacies</li>
+            </ul>
+          </p>
+        </div>  
+        <div class="grid-item bio">
+          <p>
+            Brace is an infiltrator through and through, no security measure can stand between them and a score. Brace's time at the Academy might have ended without a diploma, but it has given them to confidence to take charge of situations and act as a devious leader. Brace still has friends from their days in the Academy, namely the noblewoman Roslyn Kellis. But that time also came with its fair share of rivals, namely Petra from the city clerk's office.
+          </p>
+        </div>
+    </div>
+    <div class="crew-grid">
+        <div class="grid-item name">
+          <h2>Cross Clermont</h2>
+          <br>
+          Nickname: <span id="twelves">Twelves</span>
+          <hr>
+        </div>
+        <div class="grid-item portrait">
+          <img src="images/cross.png" class="left" alt="Cross Clermont, spirit walker">
+        </div>
+        <div class="grid-item stat">
+          <p>
+            <ul>
+              <li>Whisper — An arcane adept and channeler</li>
+              <li>Brooding, Bony, Iruvian</li>
+              <li>Former Academic</li>
+              <li>Vice of Stupor / drinking to excess</li>
+            </ul>
+        </p>
+        </div>  
+        <div class="grid-item bio">
+        <p>
+          Twelves...no one has ever quite figured out why his nickname is a plural. Just like no one has ever quite figured out why he is so adapt at compelling ghosts. But it might have something to do with why he was kicked out of the Academy just short of graduation. Twelves time at the Academy focused heavily on rituals and the occult, and thanks to Frog's bad influence, a fair share of debauchtery went along with it, which is not always the best combination. It is no surprise then that Twelves and Frog found themselves on the streets and looking to ply their skills to a more interested audience. Twelves' obsessesssion with the occult has led him to some of the darkest parts of the already dark city of Duskvol, and he has made friends with the likes of the vampire Scurlock. Similarly, he has come up against several others lurking in the shadows, who are not too keen to share the space, namely the spirit trafficker Flint.
+      </p>
+        </div>
+    </div>
 
-    <div class="grid-bio">
-  		<div class="grid-item">
-    		<img src="images/brace.png" class="left" alt="Brace Bookman, cut-throat thief">
-			<div class="caption">
-				<span id="frog">Frog</span>
-			</div>
-    	</div>
-  		<div class="grid-item">
-  			<h2>Brace Bookman</h2>
-  			    <p>
-    			<ul>
-    				<li>Lurk — a stealthy Infiltrator and burglar</li>
-    				<li>Plump, calm, fierce, Severosian</li>
-    				<li>Former Academic</li>
-    				<li>Vice of Pleasure / Blackmarket Delicacies</li>
-    			</ul>
-    			</p>
-    			<p>
-    				Brace is an infiltrator through and through, no security measure can stand between them and a score. Brace's time at the Academy might have ended without a diploma, but it has given them to confidence to take charge of situations and act as a devious leader. Brace still has friends from their days in the Academy, namely the noblewoman Roslyn Kellis. But that time also came with its fair share of rivals, namely Petra from the city clerk's office.
-				</p>
-  		</div>
-  		<div class="grid-item">
-  			<img src="images/cross.png" class="left" alt="Cross Clermont, spirit walker">
-  		</div>  
-  		<div class="grid-item">
-  			<h2>Cross Clermont — <span id="twelves">Twelves</span></h2>
-    		<p>
-    			<ul>
-    				<li>Whisper — An arcane adept and channeler</li>
-    				<li>Brooding, Bony, Iruvian</li>
-    				<li>Former Academic</li>
-    				<li>Vice of Stupor / drinking to excess</li>
-    			</ul>
-    		</p>
-    		<p>
-    		Twelves...no one has ever quite figured out why his nickname is a plural. Just like no one has ever quite figured out why he is so adapt at compelling ghosts. But it might have something to do with why he was kicked out of the Academy just short of graduation. Twelves time at the Academy focused heavily on rituals and the occult, and thanks to Frog's bad influence, a fair share of debauchtery went along with it, which is not always the best combination. It is no surprise then that Twelves and Frog found themselves on the streets and looking to ply their skills to a more interested audience. Twelves' obsessesssion with the occult has led him to some of the darkest parts of the already dark city of Duskvol, and he has made friends with the likes of the vampire Scurlock. Similarly, he has come up against several others lurking in the shadows, who are not too keen to share the space, namely the spirit trafficker Flint.
-			</p>
-  		</div>
-  		<div class="grid-item">
-  			<img src="images/crowl.png" class="left" alt="Crowl Welker, bacchus businessman">
-  		</div>
-  		<div class="grid-item">
-  			<h2>Crowl Welker — <span id="byron">Byron</span></h2>
-    		<p>
-    			<ul>
-    				<li>Slide — a subtle manipulator and spy</li>
-    				<li>Brooding, delicate, striking Doskvolian</li>
-    				<li>Disgraced Noble</li>
-    				<li>Vice of Pleasure / Dramatic and Scandalous Love Affairs</li>
-    			</ul>
-    		</p>
-    		<p>
-    			No one is going to be accussing Byron of having a plan anytime soon. But that isn't really his style anyway. He was the famed second son of Duskvolian aristocracy. Shipping, art, even orchard management — these were meant to be his trades. But after a rather scandalous love affair came to light, Byron found himself without much of his former glory and comforts. This did not bother Byron too much, beer is cheap, and the thrills of the streets are so much more enticing. Still he finds himself every so often yearning for the ludicrous drama of high society. His time in and out of jail has helped him build up a network of friends inside, namely the jail-bird Harker. But not everyone takes kindly to a nobleman "playing" streeturchin, and he has gotten on the wrong side of Nyryx, the owner of a harlot's house in Nightmarket.
-			</p>
-  		</div>  
-  		<div class="grid-item">
-  			<img src="images/aldo.png" class="left" alt="Portrait of Aldo Banfield, saboteur">
-  		</div>
-  		<div class="grid-item">
-  			<h2>Aldo Banfield — <span id="wicker">Wicker</span></h2>
-    		<p>
-    			<ul>
-    				<li>Leech — a saboteur and technician</li>
-    				<li>Affable, grimy, wiry Doskvolian</li>
-    				<li>Former Apothecary</li>
-    				<li>Vice of the Weird / Curiosity Shop</li>
-    			</ul>
-    		</p>
-    		<p>
-    		For years Wicker worked as a physicker, plying his trade to treat wounds and stabilize the dying. But he found himself increasingly fascinated with the weird maladies that Duskvol seemed to inflict upon its denizens. Bodily humors seemed not to phase him in the least, even when others of his trade would become squeamish. But his willingness to take on jobs and experiment with less savory arts led to several unexpected discoveries in the field of sabotoge and chaos. Unfortunately, his love for the weird has become something of an obsession, always seeking out some new dark mystery within the bowls of Duskvol. To that end he has made many friends in the trade, namely the corpse thief Eckerd, while acquiring rivals in equal share such as the blood dealer Jul.
-			</p></div> 
-</div>
+        <div class="crew-grid">
+        <div class="grid-item name">
+          <h2>Crowl Welker</h2>
+          <br>
+          Nickname: <span id="byron">Byron</span>
+          <hr>
+        </div>
+        <div class="grid-item portrait">
+          <img src="images/crowl.png" alt="Crowl Welker, bacchus businessman">
+        </div>
+        <div class="grid-item stat">
+        <p>
+          <ul>
+            <li>Slide — a subtle manipulator and spy</li>
+            <li>Brooding, delicate, striking Doskvolian</li>
+            <li>Disgraced Noble</li>
+            <li>Vice of Pleasure / Dramatic and Scandalous Love Affairs</li>
+          </ul>
+        </p>
+        </div>  
+        <div class="grid-item bio">
+        <p>
+          No one is going to be accussing Byron of having a plan anytime soon. But that isn't really his style anyway. He was the famed second son of Duskvolian aristocracy. Shipping, art, even orchard management — these were meant to be his trades. But after a rather scandalous love affair came to light, Byron found himself without much of his former glory and comforts. This did not bother Byron too much, beer is cheap, and the thrills of the streets are so much more enticing. Still he finds himself every so often yearning for the ludicrous drama of high society. His time in and out of jail has helped him build up a network of friends inside, namely the jail-bird Harker. But not everyone takes kindly to a nobleman "playing" streeturchin, and he has gotten on the wrong side of Nyryx, the owner of a harlot's house in Nightmarket.
+      </p>
+        </div>
+    </div>
+
+            <div class="crew-grid">
+        <div class="grid-item name">
+          <h2>Aldo Banfield</h2>
+          <br>
+          Nickname: <span id="wicker">Wicker</span>
+          <hr>
+        </div>
+        <div class="grid-item portrait">
+          <img src="images/aldo.png" alt="Portrait of Aldo Banfield, saboteur">
+        </div>
+        <div class="grid-item stat">
+        <p>
+          <ul>
+            <li>Leech — a saboteur and technician</li>
+            <li>Affable, grimy, wiry Doskvolian</li>
+            <li>Former Apothecary</li>
+            <li>Vice of the Weird / Curiosity Shop</li>
+          </ul>
+        </p>
+        </div>  
+        <div class="grid-item bio">
+        <p>
+          For years Wicker worked as a physicker, plying his trade to treat wounds and stabilize the dying. But he found himself increasingly fascinated with the weird maladies that Duskvol seemed to inflict upon its denizens. Bodily humors seemed not to phase him in the least, even when others of his trade would become squeamish. But his willingness to take on jobs and experiment with less savory arts led to several unexpected discoveries in the field of sabotoge and chaos. Unfortunately, his love for the weird has become something of an obsession, always seeking out some new dark mystery within the bowls of Duskvol. To that end he has made many friends in the trade, namely the corpse thief Eckerd, while acquiring rivals in equal share such as the blood dealer Jul.
+        </p>
+        </div>
+    </div>
 
     </main>
-<br><br><br>
     <footer>
     	<p>Blades in the Dark is an Evil Hat Productions Property. All characters used in this story are fictitious. Site created by Andrew Russell 2020.</p>
     </footer>
