--- a/newspaper.html
+++ b/newspaper.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="favicon.ico" href="images/favicon.ico"/>
+        <!--font-awesome-->
+
+        <script src="https://kit.fontawesome.com/84d35acee3.js" crossorigin="anonymous"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159565284-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -11,25 +17,38 @@
 
   gtag('config', 'UA-159565284-1');
 </script>
+<!--Style Sheets -->
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Meddon&display=swap" rel="stylesheet"> 
+<!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Meddon&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet">
+<!--JavaScript-->
+    <script type="text/javascript" src="js/scripts.js"></script>
     <title>Blades in the Dark Ann Arbor</title>
 </head>
 <body>
-	<div class="skip"><a href="#main">Skip to Main Content</a></div>
-      <nav>
-        <ul>
-          <li><a href="index.html">About</a></li>
-          <li><a href="crew.html">The Crew</a></li>
-          <li><a  href="city.html">The City</a></li>
-          <li><a class="active" href="newspaper.html">The Duskvol Daily</a></li>
-        </ul>
-      </nav>
-	<header>
-  		<h1>The Duskvol Daily</h1>
+    <header>
+        <div class="skip"><a href="#main">Skip to Main Content</a></div>
+        <nav>
+            <ul>
+              <li><a href="index.html">The Game</a></li>
+               <li><a href="map.html">The City</a></li>
+              <li><a href="crew.html">The Crew</a></li>
+              <li><a href="faction.html">The Faction</a></li>
+              <li><a class="active" href="newspaper.html"><i class="fas fa-dungeon"></i> The Duskvol Daily</a></li>
+               <li><a href="contact.html">The Contact</a></li>
+            </ul>
+          </nav>
     </header>
-    <main class="newspaper">
+    <main id="main">
+    <section class="newspaper-background">
+      <h1>The Duskvol Daily</h1>
+      <hr>
+    <section class="newspaper">
         <p><h2>Gondoliers Gone Grouchy!</h2></p>
         <img src="images/gondolier_bw.png" alt="Gondolier sailing through the canals of Duskvol">
         <!--image from https://i.dailymail.co.uk/i/pix/2010/10/16/article-1321111-0BA0C9BB000005DC-961_634x678.jpg-->
@@ -37,11 +56,13 @@
         </p>
         <p>For now their distress remains a mystery, but surely our wonderous and benevolent governor will have them back to work in no time.</p>
         <p><h2>Who Is The Weeping Lady? An Investigative Series Part I</h2></p>
-        <p>If you have lived in Duskvol for any amount of time, you will have heard the rumors of the Weeping Lady, an enigmatic figure often associated with the theft of children. For many years, this folk figure was something that only the lower-class of Charhall would tell their children at night or the ladies of the Nightmarket would gossip over. This reporter even recalls his own mother telling him such ghost stories to make sure he behaved. But we grow up, we stop believing in such nonsense, right? But why? We live in a city filled with ghosts and vampires, why not a mythical child stealing woman? Well it seems she is not just the stuff of idle prattle, for Lady Benthamule claims to have seen a shrowded woman on the very night of her daughters disappearance. Why some may cry hysteria, this reporter can't help but wonder if there isn't something more. Something <a href="secret.html" class="secret">just waiting beneath the surface</a>. Follow along in this ongoing piece of investigative journalism as we explore Who Is the Weeping Lady?
+        <p>If you have lived in Duskvol for any amount of time, you will have heard the rumors of the Weeping Lady, an enigmatic figure often associated with the theft of children. For many years, this folk figure was something that only the lower-class of Charhall would tell their children at night or the ladies of the Nightmarket would gossip over. This reporter even recalls his own mother telling him such ghost stories to make sure he behaved. But we grow up, we stop believing in such nonsense, right? But why? We live in a city filled with ghosts and vampires, why not a mythical child stealing woman? Well it seems she is not just the stuff of idle prattle, for Lady Benthamule claims to have seen a shrowded woman on the very night of her daughters disappearance. Why some may cry hysteria, this reporter can't help but wonder if there isn't something more. Something <a href="secret.html" class="secret">just waiting beneath the surface</a>. Follow along in this ongoing piece of investigative journalism as we explore Who Is the Weeping Lady?</p>
         <p><h2>Lord Governer's Day is Upon us!</h2></p>
         <img src="images/victoria-diamond-jubileeia.jpg" alt="Queen Victoria's Diamond Jubileeia, pretending to be Lord Governor's Day of Duskvol">
         <!--https://www.english-heritage.org.uk/learn/story-of-england/victorian/power-and-politics/-->
         <p>That's right denizens of Duskvol, Lord Governor's Day is here! Sure it's hard to tell what season, or even what day it is in our Twilight Town, but you can bet everyone knows when the festivities begin. Due to the gondolier strike this year the parade will be held along the streets and fireworks will likely be banned for safety reasons. In the past the hasn't stopped local gangs for igniting some off the their neighborhoods. This is highly dangerous, and we here at the Daily Duskvol do not condon such actions (but we'll be putting out a list of best places to see the fireworks in tomorrow paper!). This year will include the typical treats and festivities, but the Lord Governor has declared something new this year as well--and apparently it's a surprise! His entire staff were incredibly tight lipped, though very excited. I guess we'll just have to wait and see.
+      </p>
+  </section>
 
     </main>
 <br><br><br>
